# limx-robotics-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  install-mcp.ps1  justfile  llms-full.txt  llms.txt  pyproject.toml  setup-sim-env.ps1  start.bat  start.ps1
.github/workflows/: ci.yml
docs/: ASSESSMENT.md  LIMX_COMPANY.md  LIMX_FOSS.md  LIMX_ROBOTS.md  SETUP.md  SIM_SETUP.md  TOOLS.md
mcpb/: .mcpbignore  CHANGELOG.md  manifest.json  pack.ps1  requirements.txt
mcpb/assets/prompts/: examples.json  system.md  user.md
mcpb/src/limx_robotics_mcp/: __main__.py  app.py  server.py
src/limx_robotics_mcp/: __init__.py  server.py
tests/: conftest.py  test_backend.py  test_server.py
web_sota/: index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  tsconfig.json  vite.config.ts
web_sota/backend/: server.py
web_sota/backend/routes/: ai.py  llm.py  logging.py  models.py  policies.py  settings.py  sim.py
web_sota/e2e/: fleet-audit.spec.ts  pages.spec.ts  screenshots.spec.ts
web_sota/src/: App.tsx
web_sota/src/pages/: Dashboard.tsx  Help.tsx  LLM.tsx  Logging.tsx  Models.tsx  Policies.tsx  Settings.tsx  Simulations.tsx
