[project]
name = "limx-robotics-mcp"
version = "0.2.0"
description = "FastMCP wrapper for LimX Dynamics open-source robotics stack"
requires-python = ">=3.11,<3.13"  # limxsdk pins numpy 1.26.3 (no cp313 wheels)
dependencies = [
    "fastmcp>=3.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]
# NOTE: limxsdk is installed from the local Windows wheel, not PyPI:
#   uv pip install D:\Dev\repos\external\humanoid-mujoco-sim\limxsdk-lowlevel\python3\win\limxsdk-3.4.2-py3-none-any.whl -p .venv

[project.scripts]
limx-robotics-mcp = "limx_robotics_mcp.server:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
